# Mirage

./: .analysis_pip  .analyze_config  .default_preferences.json  .dev_pip  .dockerignore  .gitignore  .pre-commit-config.yaml  .sim_pip  BUGLIST  Cargo.toml  CausticMapGen.sim  Dockerfile  LICENSE  LightCurves.res  Makefile  README.md  Test Simulation.res  Test.param  Test1Result.res  Test2Result.res  TestSimulation.sim  cluster.yaml  compile  compile.sh  conf.py  configure  docker-compose.yaml  expressions.txt  main.py  mirage.py  mirage_main.py  package-list.txt  pyproject.toml  setup.py  test.sim
docs/: conf.py  index.rst  manpg.i  mirage.rst
docs/development/: APIs.drawio  Calculator APIs.md
docs/source/: citing.rst  conf.py  filespecification.rst  gettingstarted.rst  includes.rst  index.rst  installation.rst  licensing.rst  mirage.calculator.rst  mirage.engine.rst  mirage.lens_analysis.rst  mirage.parameters.rst  mirage.rst  mirage.util.rst  mirage.views.rst  modules.rst  publications.rst
examples/: local_microlensing_demo.yaml  microlensing_demo.yaml  point_lens_demo.yaml
lens_analysis/: CausticMap.py  LightCurves.py  MagnificationMap.py  Result.py  __init__.py
mirage/: __init__.py  io.py  lensing_potential.py  main.py  mirage-requirements.txt  result.py  setup.py  thesisPresentation.py
mirage/calc/: __init__.py  batch_runner.py  dask_engine.py  engine.py  kd_tree.py  ray_tracer.py  reducer.py  reducer_funcs.c  reducer_funcs.pxd  reducer_funcs.pyx  reducer_utils.py  reducers.py
mirage/calculator/: InitialMassFunction.py  KdTree.hpp  MassFunction.py  ResultCalculator.py  __init__.py  old_stargen  optimized_funcs.cpp  optimized_funcs.pxd  optimized_funcs.pyx  peak_finding.cpp  peak_finding.pxd  peak_finding.pyx
mirage/engine/: AbstractEngine.py  CalculationDelegate.py  DaskCalculationDelegate.py  MagmapReducer.py  QueryReducer.py  SparkCalculationDelegate.py  __init__.py  dask_tracer.cpp  dask_tracer.pxd  dask_tracer.pyx  micro_ray_tracer.cpp  micro_ray_tracer.pxd  micro_ray_tracer.pyx  ray_tracer.cpp  ray_tracer.pxd  ray_tracer.pyx  rays.py
mirage/lens_analysis/: CausticMap.py  Curves.py  LightCurves.py  MagnificationMap.py  MomentMap.py  Result.py  __init__.py  result.py
mirage/model/: __init__.py  initial_mass_function.py  lensing_system.py  quasar.py  source_plane.py  starfield.py  tracing_parameters.py
mirage/parameters/: CalculationDependency.py  Cosmic.py  MassModel.py  MicrolensingParameters.py  Parameters.py  Quasar.py  ResultParameters.py  Simulation.py  __init__.py  parameters_error.py
mirage/reducers/: reducer.c  (+13 more)
mirage_ext/: Cargo.toml  kiddo_tree.rs  lib.rs  reducer_fns.rs
mirage_spark/: .project
mirage_venv/: pyvenv.cfg
resources/: microlensing_demo.yaml  point_lens_demo.yaml
scripts/: create-cluster.sh  lens_analysis  lens_analysis.sh  mirage  mirage.template  shell.py  tmp
spark_mirage/: .cache-main  .project  build.sbt
test/: TestingHelpers.py  __init__.py  testDaskCalculationDelegate.py  testMagmapReducer.py  testQueryReducers.py  testTestingUtils.py  testUtils.py
test_parameters/: 2237_micro.msim  LaptopTest.sim  MomentMap.sim  PresentationSim.sim  Test.sim  TestCluster.sim  TestOrientation.sim  TestSimulation.sim
(+116 files in other folders)
