[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "mirage_ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "mirage_ext/lib.rs"

[dependencies]
ndarray = { version = "0.15.3"}
numpy = "0.15"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
