[package]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
name = "mirage_ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "mirage_ext/lib.rs"

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
numpy = "0.19.0"
kiddo  = "2.1.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]
