[project]
name = "Mirage"
version = "2.0.0"
description = "Simulating Gravitational Microlensing"
authors = [
  { name = "JordanKoeller", email = "jkoeller12@gmail.com" },
  { name = "DavidPooley", email = "dpooley@trinity.edu" }
]
readme = "README.md"

requires-python = ">=3.11"

[project.urls]
Repo = "https://github.com/jordankoeller/mirage"

[tool.pyink]
pyink-indention = 2

[flake8]
max-line-length = 88
