[project]
name = "mirage"
version = "2.0.0"
description = "Simulating Gravitational Microlensing"
authors = [
  { name = "JordanKoeller", email = "jkoeller12@gmail.com" },
  { name = "DavidPooley", email = "dpooley@trinity.edu" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "dask==2023.6.0",
  "dask[distributed]==2023.6.0",
  "dask-cloudprovider[aws]==2022.10.0",
  "numpy==1.23.5",
  "astropy==5.1",
  "bokeh==3.1.1",
  "scipy==1.10.0",
  "maturin==1.1.0",
  "PyYAML==6.0",
  "cython==0.29.33",
  "hurry.filesize==0.9",
  "pandas==2.0.2",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "mirage"
module-name = "mirage_ext"

[project.urls]
Repo = "https://github.com/jordankoeller/mirage"

[tool.pyink]
pyink-indention = 2

[flake8]
max-line-length = 88
